aws-loadbalancer-controller/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: api-service
                port:
                  number: 3001

          - pathType: Prefix
            path: /*
            backend:
              service:
                name: web-service
                port:
                  number: 80
